rustdocs/errors/rust-bitcoin-units-tests-api.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin_units`
  --> ../rust-bitcoin/units/tests/api.rs:15:5
   |
15 | use bitcoin_units::locktime::{absolute, relative}; // Typical usage is `...
   |     ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_units`
   |
help: you might be missing a crate named `bitcoin_units`, add it to your project and import it in your code
   |
12 + extern crate bitcoin_units;
   |

error[E0432]: unresolved import `bitcoin_units`
  --> ../rust-bitcoin/units/tests/api.rs:16:5
   |
16 | use bitcoin_units::{
   |     ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `bitcoin_units`
   |
help: you might be missing a crate named `bitcoin_units`, add it to your project and import it in your code
   |
12 + extern crate bitcoin_units;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
